# hyperion

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  STATUS-2026-06-03.md  SUPPORT.md  deny.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/hyperion-adapters/: Cargo.toml
crates/hyperion-adapters/src/: acme.rs  backup.rs  cert.rs  cloudflare.rs  cmd.rs  email.rs  files.rs  fs.rs  ftp.rs  lib.rs  mariadb.rs  nginx.rs  nodejs.rs  phpfpm.rs  postfix.rs  postgres.rs  rollback.rs  ssh.rs  users.rs  wpcli.rs
crates/hyperion-adapters/templates/: nginx-panel.conf.j2  nginx-vhost-proxy.conf.j2  nginx-vhost-redirect.conf.j2  nginx-vhost-suspended.conf.j2  nginx-vhost.conf.j2  phpfpm-pool.conf.j2  systemd-node-app.service.j2
crates/hyperion-auth/: Cargo.toml
crates/hyperion-auth/src/: bundle_sig.rs  csrf.rs  keys.rs  lib.rs  password.rs  session.rs  totp.rs
crates/hyperion-core/: Cargo.toml
crates/hyperion-core/src/: agent.rs  config_persist.rs  lib.rs  master_rpc.rs  panel_import.rs  real_adapter.rs  secrets.rs  service.rs  tls_pin.rs  wordfence.rs  wp_updates.rs
crates/hyperion-import/: Cargo.toml
crates/hyperion-import/src/: adapter.rs  bundle.rs  cloudpanel.rs  error.rs  export.rs  hestia.rs  ir.rs  lib.rs  panel.rs  planner.rs
crates/hyperion-rpc/: Cargo.toml
crates/hyperion-rpc-client/: Cargo.toml
crates/hyperion-rpc-client/src/: lib.rs  remote.rs
crates/hyperion-rpc-server/: Cargo.toml
crates/hyperion-rpc-server/src/: lib.rs
crates/hyperion-rpc-server/tests/: end_to_end.rs  node_connection.rs
crates/hyperion-rpc-server/tests/common/: mod.rs
crates/hyperion-rpc/src/: api.rs  codec.rs  error.rs  lib.rs  wire.rs
crates/hyperion-state/: Cargo.toml
crates/hyperion-state/migrations/: 001_initial.sql  002_limits_suspend.sql  003_expiration.sql  004_backups.sql  005_nodejs.sql  006_wordpress.sql  007_node_invites.sql  008_node_metrics.sql  009_nodes.sql  010_node_secret.sql  011_profiles.sql  012_per_hosting_acme_email.sql  013_web_users_roles_2fa.sql  014_hosting_kind_reverse_proxy.sql  015_per_hosting_monitoring.sql  016_hosting_node.sql  017_email_log.sql  018_wp_assets.sql  019_wp_asset_installs.sql  020_hosting_vhost_options.sql  021_hosting_wp_redis.sql  022_notifications.sql  023_web_users_customer_role.sql  024_web_users_avatar.sql  025_web_users_email_change.sql  026_hosting_trash.sql  027_profile_runtime_defaults.sql  028_jobs.sql  029_web_sessions.sql  030_hosting_quotas.sql  031_backup_targets.sql  032_node_drain.sql  033_audit_chain_anchor.sql  034_hostings_state_trashed.sql  035_hosting_kv.sql  036_hosting_waf.sql  037_ip_bans.sql  038_cert_wildcard.sql  039_cert_renewal_type.sql  040_web_users_totp_last_step.sql  (+13 more)
crates/hyperion-state/src/: api_keys.rs  audit.rs  backup_targets.rs  backups.rs  bans.rs  capabilities.rs  certificates.rs  custom_roles.rs  databases.rs  db.rs  email_log.rs  hosting_kv.rs  hosting_quotas.rs  hostings.rs  import_tokens.rs  invites.rs  jobs.rs  lib.rs  limits.rs  metrics.rs  monitors.rs  nodejs.rs  nodes.rs  notifications.rs  oom_events.rs  profiles.rs  scheduler.rs  system_users.rs  web_sessions.rs  web_users.rs  wordpress.rs  wp_assets.rs
crates/hyperion-state/tests/: migrations_028_031.rs
crates/hyperion-types/: Cargo.toml
crates/hyperion-types/src/: cert.rs  dns.rs  hosting.rs  import.rs  jobs.rs  lib.rs  limits.rs  migration.rs  profile.rs  spf.rs  stats.rs  wp.rs
crates/hyperion-validate/: Cargo.toml
crates/hyperion-validate/src/: lib.rs
crates/lm-adapters/: Cargo.toml
crates/lm-adapters/src/: acme.rs  backup.rs  cmd.rs  fs.rs  lib.rs  mariadb.rs  nginx.rs  nodejs.rs  phpfpm.rs  postgres.rs  users.rs  wpcli.rs
crates/lm-adapters/templates/: systemd-node-app.service.j2
crates/lm-auth/: Cargo.toml
crates/lm-auth/src/: csrf.rs  keys.rs  lib.rs  session.rs
crates/lm-core/: Cargo.toml
crates/lm-core/src/: agent.rs  lib.rs  real_adapter.rs  secrets.rs  service.rs
crates/lm-rpc/: Cargo.toml
crates/lm-rpc-client/: Cargo.toml
crates/lm-rpc-client/src/: lib.rs
crates/lm-rpc-server/: Cargo.toml
crates/lm-rpc-server/src/: lib.rs
crates/lm-rpc-server/tests/: end_to_end.rs
crates/lm-rpc/src/: api.rs  codec.rs  error.rs  lib.rs  wire.rs
crates/lm-state/: Cargo.toml
crates/lm-state/migrations/: 001_initial.sql
crates/lm-state/src/: audit.rs  backups.rs  certificates.rs  databases.rs  hostings.rs  lib.rs  limits.rs  nodejs.rs  scheduler.rs  system_users.rs  wordpress.rs
crates/lm-types/: Cargo.toml
crates/lm-types/src/: cert.rs  db.rs  hosting.rs  ids.rs  lib.rs  limits.rs  php.rs
crates/lm-validate/: Cargo.toml
crates/lm-validate/src/: domain.rs  lib.rs  sysuser.rs
docs/: GITHUB_REPO_META.md  RUNBOOK.md  panel-import-design.md
docs/screenshots/: README.md
docs/superpowers/: DEFERRED.md
docs/superpowers/plans/: 2026-05-31-foundation.md
docs/superpowers/specs/: 2026-05-31-admin-ui-design.md  2026-05-31-backups-design.md  2026-05-31-client-portal-design.md  2026-05-31-controller-enrollment-design.md  2026-05-31-expiration-scheduler-design.md  2026-05-31-foundation-design.md  2026-05-31-limits-quotas-suspend-design.md  2026-05-31-migration-design.md  2026-05-31-nodejs-stack-design.md  2026-05-31-security-hardening-design.md  2026-05-31-wordpress-templates-design.md  2026-06-17-migration-ux-rework-design.md  2026-06-28-custom-roles-design.md  2026-06-28-export-bundle-import-design.md  2026-06-28-self-service-import-wizard-design.md  2026-06-30-ha-control-plane-design.md  2026-06-30-remote-management-api-design.md
packaging/: agent.toml.example
packaging/install/: install-master.sh  install-node.sh  site-mail-wrapper.sh  update.sh
packaging/systemd/: hyperion-agent.service  hyperion-php-fpm-runtime.conf  hyperion-web.service  lm-agent.service
