[workspace]
resolver = "2"
members = [
    "crates/lm-types",
    "crates/lm-validate",
    "crates/lm-rpc",
    "crates/lm-rpc-server",
    "crates/lm-rpc-client",
    "crates/lm-state",
    "crates/lm-adapters",
    "crates/lm-core",
    "crates/lm-auth",
    "bin/lm-agent",
    "bin/lm",
    "bin/lm-web",
]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "AGPL-3.0-only"
repository = "https://github.com/kevinnechodom/linux-manager"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio", "sqlite", "macros", "migrate"
] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
uuid = { version = "1", features = ["v7", "serde"] }
ulid = { version = "1", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
blake3 = "1"
clap = { version = "4", features = ["derive"] }
askama = "0.12"
instant-acme = "0.7"
rcgen = "0.13"
regex = "1"
proptest = "1"
mockall = "0.13"
tempfile = "3"
once_cell = "1"
hex = "0.4"
rand = "0.8"
toml = "0.8"
argon2 = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "set-header"] }
subtle = "2"
url = "2"
http-body-util = "0.1"

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
