[workspace]
resolver = "2"
members = [
    "crates/hyperion-types",
    "crates/hyperion-validate",
    "crates/hyperion-rpc",
    "crates/hyperion-rpc-server",
    "crates/hyperion-rpc-client",
    "crates/hyperion-state",
    "crates/hyperion-adapters",
    "crates/hyperion-core",
    "crates/hyperion-auth",
    "crates/hyperion-import",
    "bin/hyperion-agent",
    "bin/hyperion-export",
    "bin/hctl",
    "bin/hyperion-web",
]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "AGPL-3.0-only"
repository = "https://github.com/nechodom/hyperion"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio", "sqlite", "macros", "migrate"
] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
uuid = { version = "1", features = ["v7", "serde"] }
ulid = { version = "1", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
blake3 = "1"
clap = { version = "4", features = ["derive"] }
askama = "0.12"
instant-acme = "0.8"
rcgen = "0.13"
regex = "1"
proptest = "1"
mockall = "0.13"
tempfile = "3"
once_cell = "1"
hex = "0.4"
rand = "0.8"
toml = "0.8"
toml_edit = "0.22"
argon2 = "0.5"
# bcrypt is used for the htpasswd file behind per-hosting nginx
# basic auth — nginx supports bcrypt natively (along with apr1/sha512),
# argon2 would need an external auth_request proxy.
bcrypt = "0.15"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "set-header"] }
subtle = "2"
url = "2"
http-body-util = "0.1"
x509-parser = "0.16"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder", "ring"] }
# Safe, sandboxed archive extraction for backup restore (replaces a bare
# `tar -xzf` that honoured malicious `../`/symlink members while running as root).
tar = "0.4"
flate2 = "1"
# Variant-name derive so the rpc-server can log a request's method WITHOUT
# formatting its params (which can carry plaintext secrets).
strum = { version = "0.26", features = ["derive"] }

[profile.release]
strip = "symbols"
# lto=thin + codegen-units=1 minimised binary size but the whole-program LTO
# link of hyperion-agent (which pulls in the large hyperion-core rlib) peaked
# high enough to get OOM-killed on small (1–2 GB) master nodes during
# `update.sh`'s from-source fallback. lto=off + 16 codegen units keeps peak RAM
# well within reach (and builds faster); the runtime cost is negligible for an
# I/O-bound control panel. update.sh also adds a temp swapfile as a backstop.
lto = false
codegen-units = 16
