[package]
name = "hyperion-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hyperion-types = { path = "../hyperion-types" }
hyperion-validate = { path = "../hyperion-validate" }
hyperion-rpc = { path = "../hyperion-rpc" }
hyperion-state = { path = "../hyperion-state" }
hyperion-adapters = { path = "../hyperion-adapters" }
hyperion-auth = { path = "../hyperion-auth" }
hyperion-import = { path = "../hyperion-import" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true
async-trait.workspace = true
sqlx = { workspace = true }
rcgen.workspace = true
chrono.workspace = true
hex.workspace = true
blake3.workspace = true
rand.workspace = true
toml_edit.workspace = true
ulid = "1"
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
bcrypt = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
mockall.workspace = true
tempfile.workspace = true
