[package]
name = "hyperion-rpc-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hyperion-rpc = { path = "../hyperion-rpc" }
tokio = { workspace = true }
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
base64 = { workspace = true }

[dev-dependencies]
hyperion-rpc-client = { path = "../hyperion-rpc-client" }
hyperion-types = { path = "../hyperion-types" }
hyperion-validate = { path = "../hyperion-validate" }
hyperion-state = { path = "../hyperion-state" }
hyperion-core = { path = "../hyperion-core" }
hyperion-adapters = { path = "../hyperion-adapters" }
tokio = { workspace = true, features = ["macros", "rt"] }
tempfile.workspace = true
async-trait.workspace = true
