[package]
name = "hyperion-rpc-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hyperion-rpc = { path = "../hyperion-rpc" }
tokio = { workspace = true }
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
base64 = { workspace = true }

[dev-dependencies]
hyperion-rpc-client = { path = "../hyperion-rpc-client" }
hyperion-import = { path = "../hyperion-import" }
hyperion-types = { path = "../hyperion-types" }
hyperion-validate = { path = "../hyperion-validate" }
hyperion-state = { path = "../hyperion-state" }
hyperion-core = { path = "../hyperion-core" }
hyperion-adapters = { path = "../hyperion-adapters" }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "time"] }
tempfile.workspace = true
async-trait.workspace = true
serde_json.workspace = true
chrono.workspace = true
axum.workspace = true
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging"] }
rcgen.workspace = true
