[package]
name = "hyperion-rpc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hyperion-types = { path = "../hyperion-types" }
hyperion-validate = { path = "../hyperion-validate" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
