[package]
name = "lm-auth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
argon2.workspace = true
ed25519-dalek.workspace = true
base64.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
subtle.workspace = true
hex.workspace = true

blake3.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
