[package]
name = "lm-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
lm-types = { path = "../lm-types" }
lm-validate = { path = "../lm-validate" }
lm-rpc = { path = "../lm-rpc" }
lm-state = { path = "../lm-state" }
lm-adapters = { path = "../lm-adapters" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true
async-trait.workspace = true
sqlx = { workspace = true }
rcgen.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
mockall.workspace = true
tempfile.workspace = true
