[package]
name = "lm-rpc-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
lm-rpc = { path = "../lm-rpc" }
tokio = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tempfile.workspace = true
