[package]
name = "lm-rpc-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
lm-rpc = { path = "../lm-rpc" }
tokio = { workspace = true }
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true

[dev-dependencies]
lm-rpc-client = { path = "../lm-rpc-client" }
lm-types = { path = "../lm-types" }
lm-validate = { path = "../lm-validate" }
tokio = { workspace = true, features = ["macros", "rt"] }
tempfile.workspace = true
