[package]
name = "lm-state"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
lm-types = { path = "../lm-types" }
lm-validate = { path = "../lm-validate" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sqlx = { workspace = true }
chrono.workspace = true
blake3.workspace = true
hex.workspace = true
tokio = { workspace = true }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tempfile.workspace = true
